test-web/dep-httpd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-httpd
  namespace: toast
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpd
      version: v1
  template:
    metadata:
      labels:
        app: httpd
        version: v1
    spec:
      containers:
      - name: web-httpd
        image: httpd
        ports:
        - containerPort: 80
          containerPort: 443

---

apiVersion: v1
kind: Service
metadata:
  name: svc-httpd
  namespace: toast
  labels:
    app: httpd
    version: v1
spec:
  selector:
    app: httpd
    version: v1
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
