test-web/dep-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-nginx
  namespace: toast
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - name: web-nginx
        image: nginx
        ports:
        - containerPort: 80
        - containerPort: 443

---

apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: toast
  labels:
    app: nginx
    version: v1
spec:
  selector:
    app: nginx
    version: v1
  ports: 
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  - protocol: TCP
    name: https
    port: 443
    targetPort: 443
